# depth_clustering_py

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: linters.yml  tests.yml
depth_clustering/: __init__.py  angle_diff.py  clusterer.py  depth_ground_remover.py  linear_image_labeler.py  projections.py  simple_diff.py  utils.py
notebooks/: examples.ipynb  ground-remover.ipynb
tests/: test_ground_remover.py  test_structures.py
